# gl-shader-player

./: .gitignore  Cargo.toml  README.md  config.example.yml
shaders/: tutorial.frag  tutorial.vert
src/: config.rs  main.rs  shader.rs
