[package]
name = "gl-shader-player"
version = "0.1.0"
authors = ["TTsdzb"]
description = "Simple software to render OpenGL Vertex & Fragment shaders."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
glium = "*"
thiserror = "*"
